# up2p

./: .gitignore  Cargo.toml  Dockerfile-server  Makefile  rust-toolchain.toml  up2pd.toml.build
.cargo/: config.toml
src/: lib.rs  utils.rs
src/client_lib/: app.rs  app_old.rs
src/client_lib/event/: mod.rs
src/core/: bincodec.rs  get_global_id.rs  mod.rs  request_info.rs  uprotocol.rs  uprotocol_pkg.rs
src/demo/: cli_demo.rs  minimal.rs  peer1.rs  peer2.rs
src/server/: main.rs
src/server/services/: event_router.rs  mod.rs  udp_event_handle.rs
src/server/state/: mod.rs
xtask/: config.rs  remote_server.rs  sync_config.rs
