[package]
name = "up2p"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ostatu-rs = { git = "https://github.com/yhw2003/ostatu-rs" }
rand = "0.9.0"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "demo"
path = "src/demo/minimal.rs"

[[bin]]
name = "cli-demo"
path = "src/demo/cli_demo.rs"

[[bin]]
name = "peer1"
path = "src/demo/peer1.rs"

[[bin]]
name = "peer2"
path = "src/demo/peer2.rs"

[[bin]]
name = "remote-server"
path = "xtask/remote_server.rs"

[[bin]]
name = "sync-config"
path = "xtask/sync_config.rs"
